[tool.poetry]
name = "ansi_colours"
version = "2.0.0"
description = "Library of static methods for colouring text in terminal output"
authors = ["Sarcoma <sarcoma@live.co.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"
codecov = "^2.1.8"
coverage = "^5.2.1"
pytest = "^6.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
